# fast-api-template

./: .gitignore  docker-compose.yml
Docker/FastAPI/: Dockerfile
FastAPI/: pyproject.toml
FastAPI/api/: db.py  main.py  migrate_db.py
FastAPI/api/cruds/: task.py
FastAPI/api/routers/: task.py  tasks.py
FastAPI/api/schemas/: done.py  task.py
FastAPI/tests/: test_main.py
nginx/conf.d/: default.conf
